--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 :root{
    --peru:#cd9452;
@@ -765,7 +765,9 @@ section{
    html{
       font-size: 50%;
    }
-
+.header .navbar{
+     display: none;
+}
    .home .slide .content h3{
       font-size: 7rem;
    }
