--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 *{
-   font-family: 'Dosis', sans-serif;
+   font-family: 'Poppins', sans-serif;
    margin:0; padding:0;
    box-sizing: border-box;
    outline: none; border:none;
